@startuml

title __START's Class Diagram__\n

  namespace pl.me.automation {
    namespace config {
      enum WebDriverType {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace domain {
      class pl.me.automation.domain.Product {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.AboutPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.ChangePasswordPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.ContactPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.EditBillingAddressPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.EditShippingAddressPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.HomePage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.LoggedInUserPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.LostPasswordReminderPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      abstract class pl.me.automation.page.Menu {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.MyAccountPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.OrderPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      abstract class pl.me.automation.page.PageObject {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.PaymentPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.PrivacyPolicyPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.SearchResultsPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.ShopPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.ShoppingCardPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.SingleProductPage {
      }
    }
  }
  

  namespace pl.me.automation {
    namespace page {
      class pl.me.automation.page.WishListPage {
      }
    }
  }
  

  pl.me.automation.page.AboutPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.ChangePasswordPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.ContactPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.EditBillingAddressPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.EditShippingAddressPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.HomePage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.LoggedInUserPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.LostPasswordReminderPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.Menu -up-|> pl.me.automation.page.PageObject
  pl.me.automation.page.MyAccountPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.OrderPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.PaymentPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.PrivacyPolicyPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.SearchResultsPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.ShopPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.ShoppingCardPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.SingleProductPage -up-|> pl.me.automation.page.Menu
  pl.me.automation.page.WishListPage -up-|> pl.me.automation.page.Menu


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
